--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,31 @@
+h1 {
+	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+}
 
 #occupation {
-	font-style: italic;
+	font-family: "Raleway",sans-serif;
+	font-weight: 300;
+	font-size: 22px;
 }
 
 #top {
 	margin-bottom: 25px;
 }
 
+#intro {
+	margin-bottom: 25px;
+}
+
 #content {
+	font-family: "Open Sans", sans-serif;
 	margin-left: 200px;
 	margin-right: 200px;
-	font-size: 15px;
+	font-size: 16px;
 }
 
 #more-info {
+	font-family: "Raleway", sans-serif;
 	font-size: 25px;
 	margin-top: 25px;
 	margin-bottom: 25px;
