--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 #intro {
+	font-family: "Open Sans", sans-serif;
 	margin-bottom: 25px;
 }
 
@@ -21,7 +22,7 @@ h1 {
 	font-family: "Open Sans", sans-serif;
 	margin-left: 200px;
 	margin-right: 200px;
-	font-size: 16px;
+	font-size: 15px;
 }
 
 #more-info {
@@ -30,4 +31,8 @@ h1 {
 	margin-top: 25px;
 	margin-bottom: 25px;
 	text-align: center
+}
+
+.year {
+	font-weight: bold;
 }
