--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
-h1 {
-	font-family: "Raleway", sans-serif;
-	font-weight: 400;
+#title {
+	font-family: "Playfair Display", sans-serif;
+	margin-top: 50px;
+	font-size: 65px;
 }
 
 #occupation {
 	font-family: "Raleway",sans-serif;
 	font-weight: 300;
-	font-size: 22px;
+	font-size: 18px;
+	margin-bottom: 25px;
 }
 
 #top {
@@ -15,7 +17,7 @@ h1 {
 
 #intro {
 	font-family: "Open Sans", sans-serif;
-	margin-bottom: 25px;
+	margin-bottom: 50px;
 }
 
 #content {
@@ -25,12 +27,16 @@ h1 {
 	font-size: 15px;
 }
 
+h2 {
+	font-family: "Playfair Display", sans-serif;
+}
+
 #more-info {
 	font-family: "Raleway", sans-serif;
 	font-size: 25px;
 	margin-top: 25px;
-	margin-bottom: 25px;
-	text-align: center
+	margin-bottom: 75px;
+	text-align: center;
 }
 
 .year {
