Closed brackets for title

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 	font-family: "Playfair Display", sans-serif;
 	margin-top: 50px;
 	font-size: 65px;
+}
 
 #occupation {
 	font-family: "Raleway",sans-serif;
