--- a/style.css
+++ b/style.css
@@ -1,48 +1,68 @@
 @import url(https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700|Open+Sans);
 /* Header */
 header {
+  margin-top: 25px;
   margin-bottom: 25px;
+  margin-left: 50px;
 }
-header h1 {
+header #title {
   font-family: "Nanum Myeongjo", sans-serif;
-  margin-top: 50px;
+  font-style: italic;
   font-size: 50px;
+  margin-top: -1px;
 }
-header #subtitle {
+header #text-above-title, header #text-below-title {
   font-family: "Nanum Myeongjo", sans-serif;
-  font-size: 18px;
-  margin-bottom: 25px;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 
 /* Content */
-#content {
-  font-family: "Open Sans", sans-serif;
+#tribute-info {
+  font-family: "Georgia", sans-serif;
   margin-left: 200px;
   margin-right: 200px;
   font-size: 15px;
 }
-#content #intro {
+#tribute-info #top {
+  display: flex;
+  justify-content: flex-start;
   margin-top: 50px;
   margin-bottom: 50px;
 }
-#content section {
+#tribute-info #top #img-div > figcaption {
+  font-style: italic;
+  text-align: center;
+}
+#tribute-info section {
   padding: 30px 30px;
 }
-#content section .section-title {
+#tribute-info section .section-title {
   font-family: "Nanum Myeongjo", sans-serif;
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 25px;
 }
-#content section .year {
+#tribute-info section .year {
   font-weight: bold;
 }
 
-footer {
+#tribute-link {
   font-family: "Nanum Myeongjo", sans-serif;
   font-size: 25px;
+  text-align: center;
   margin-top: 25px;
   margin-bottom: 75px;
+}
+
+/* Fade-in for scrolling */
+.hide-elem {
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+  transition: opacity 1s;
 }
 
 /*# sourceMappingURL=style.css.map */
