--- a/style.scss
+++ b/style.scss
@@ -1,37 +1,46 @@
 @import url(https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700|Open+Sans);
 
 $main-font: "Nanum Myeongjo", sans-serif;
-$content-font: "Open Sans", sans-serif;
+$content-font: "Georgia", sans-serif;
 
 /* Header */
 header {
+	margin-top: 25px;
 	margin-bottom: 25px;
+	margin-left: 50px;
 
-	h1 {
+	#title {
 		font-family: $main-font;
-		margin-top: 50px;
+		font-style: italic;
 		font-size: 50px;
+		margin-top: -1px;
 	}
 
-	#subtitle {
+	#text-above-title, #text-below-title {
 		font-family: $main-font;
-		font-size: 18px;
-		margin-bottom: 25px;
+		font-size: 15px;
+		text-transform: uppercase;
 	}
 }
 
 /* Content */
-#content {
+#tribute-info {
 	font-family: $content-font;
 	margin-left: 200px;
 	margin-right: 200px;
 	font-size: 15px;
 
-	#intro {
+	#top {
+		display: flex;
+		justify-content: flex-start;
 		margin-top: 50px;
 		margin-bottom: 50px;
-	}
 
+		#img-div > figcaption {
+			font-style: italic;
+			text-align: center;
+		}
+	}
 
 	section {
 		padding: 30px 30px;
@@ -49,13 +58,24 @@ header {
 	}
 }
 
-footer {
+#tribute-link {
 	font-family: $main-font;
 	font-size: 25px;
+	text-align: center;
 	margin-top: 25px;
 	margin-bottom: 75px;
 }
 
+
+/* Fade-in for scrolling */
+.hide-elem {
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+  transition: opacity 1s;
+}
 
 
 
